syntax = "proto3";

package proto;

import "cmd/cmd_gadget.proto";
import "define.proto";

option go_package = "./;proto";

message UseMiracleRingReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5226;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    enum MiracleRingOpType {
        MIRACLE_RING_OP_NONE = 0;
        MIRACLE_RING_OP_PLACE = 1;
        MIRACLE_RING_OP_RETRACT = 2;
    }

    uint32 miracle_ring_op_type = 13;
    Vector pos = 8;
    Vector rot = 7;
}

message UseMiracleRingRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5218;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 11;
    uint32 miracle_ring_op_type = 7;
}

message MiracleRingDataNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5225;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    bool is_gadget_created = 8;
    uint32 last_take_reward_time = 14;
    uint32 gadget_entity_id = 12;
    uint32 last_deliver_item_time = 10;
    uint32 miracle_ring_cd = 7;
}

message MiracleRingTakeRewardReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5207;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    uint32 gadget_id = 11;
    uint32 gadget_entity_id = 7;
}

message MiracleRingTakeRewardRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5202;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 retcode = 14;
}

message MiracleRingDropResultNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5231;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    int32 last_take_reward_time = 5;
    int32 drop_result = 9;
}

message MiracleRingDeliverItemReq {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5229;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
        IS_ALLOW_CLIENT = 1;
    }

    InterOpType op_type = 9;
    repeated ItemParam item_param_list = 1;
    repeated uint64 food_weapon_guid_list = 4;
    uint32 gadget_id = 14;
    uint32 gadget_entity_id = 5;
}

message MiracleRingDeliverItemRsp {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5222;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    InteractType interact_type = 15;
    int32 retcode = 11;
    InterOpType op_type = 14;
    uint32 gadget_id = 4;
    uint32 gadget_entity_id = 9;
}

message MiracleRingDestroyNotify {
    enum CmdId {
        option allow_alias = true;
        NONE = 0;
        CMD_ID = 5244;
        ENET_CHANNEL_ID = 0;
        ENET_IS_RELIABLE = 1;
    }

    uint32 entity_id = 7;
}
